# repo-map

./: .gitignore  CLA.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/: pull_request_template.md
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
docs/adr/: 0001-graph-identity-model.md  0002-canonical-key-grammar-and-relationship-vocabulary.md  0003-canonicalization-pipeline-storage-transition-and-replay-strategy.md  0004-canonicalizer-implementation-contract-and-golden-fixture-strategy.md  0005-canonical-storage-ddl-raw-observation-retention-and-dual-write-plan.md  0006-project-licensing-and-commercialization-strategy.md  0007-canonical-readback-and-explain-query-contracts.md  0008-markdown-documentation-graph-model.md  0009-public-query-migration-and-legacy-readback-retirement.md  0010-structured-configuration-graph-model.md  0011-xml-plist-html-graph-model.md  0012-static-css-graph-model.md  0013-css-html-selector-matching.md  0014-source-ingestion-architecture.md  0015-feed-graph-model.md  0016-saved-page-static-artifact-ingestion.md  0017-warc-archive-graph-model.md  0018-local-documents-graph-model.md  0019-yaml-graph-model.md  0020-static-ruby-graph-model.md  0021-static-javascript-graph-model.md  0022-static-email-graph-model.md  0023-bulk-local-corpus-ingestion.md  (+8 more)
docs/specs/: roadmap.md  (+5 more)
examples/: repomap.local.example.toml
src/test/fixtures/python_ecosystem/pyproject/basic/: pyproject.toml
tools/: run_tests.py  test_report.py
(+475 files in other folders)
