[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "repomap-kg"
version = "0.1.0"
description = "Deterministic knowledge graph builder for polyglot repositories."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [{ name = "RepoMap contributors" }]
dependencies = []

[project.scripts]
repomap-kg = "repomap_kg.cli:main"

[tool.setuptools]
package-dir = { "" = "src/main/python" }

[tool.setuptools.packages.find]
where = ["src/main/python"]
